# fv-match

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: bets_sample.json  results_sample.json  slate_sample.json
src/fvmatch/: __init__.py  cli.py  config.py  engine.py  engine_game.py
src/fvmatch/accounting/: __init__.py  clv.py  resolve.py
src/fvmatch/data/: __init__.py  fixtures.py  live_feed.py  market.py  persistence.py  polymarket.py  ratings.py  results.py  store.py
src/fvmatch/data/polymarket/: __init__.py  classify.py  clob_read.py  constants.py  game.py  gamma.py  odds.py  taxonomy.py
src/fvmatch/edge/: __init__.py  devig.py  gate.py  kelly.py
src/fvmatch/execution/: __init__.py  client.py  clob.py
src/fvmatch/model/: __init__.py  calibration.py  counts.py  dixon_coles.py  live.py  markets.py  pricing.py  ratings_prior.py
supabase/migrations/: 0001_init.sql
tests/: __init__.py  conftest.py  test_accounting.py  test_calibration.py  test_classify.py  test_counts.py  test_devig.py  test_engine.py  test_engine_game.py  test_execution.py  test_game_surface.py  test_gamma.py  test_gate.py  test_kelly.py  test_live.py  test_live_feed.py  test_markets.py  test_model.py  test_persistence.py  test_polymarket_constants.py  test_polymarket_odds.py  test_pricing.py  test_ratings.py
web/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/analyze/: route.ts
web/src/app/api/fixtures/: route.ts
web/src/app/api/live/: route.ts
web/src/app/api/markets/[slug]/: route.ts
web/src/app/api/markets/catalog/: route.ts
web/src/app/api/markets/match/[baseSlug]/: route.ts
web/src/app/api/sports/stream/: route.ts
web/src/app/markets/: page.tsx
web/src/app/markets/match/[baseSlug]/: page.tsx
web/src/components/: AnalysisResults.tsx  ColumnHelp.tsx  EdgeArbTables.tsx  LivePitchWidget.tsx  MarketsBrowser.tsx  MatchDetail.tsx  MatchForm.tsx
web/src/core/: arb.test.ts  arb.ts  clv.test.ts  clv.ts  constants.ts  devig.ts  dixonColes.ts  engine.ts  fixtures.ts  gameSurface.test.ts  gameSurface.ts  gate.ts  kelly.ts  live.test.ts  live.ts  liveFeed.test.ts  liveFeed.ts  marketCatalog.test.ts  marketCatalog.ts  markets.ts  polySportsFeed.test.ts  polySportsFeed.ts  polymarket.ts  ratings.ts  teamNames.ts
web/src/data/: international_elo.json
