[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fvmatch"
version = "0.1.0"
description = "Competition-agnostic football match-outcome fair-value engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0",
    "typer[all]>=0.9.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pre-commit>=3.7",
]

[project.scripts]
fvmatch = "fvmatch.cli:app"

[tool.uv]
dev-dependencies = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
lint.ignore = ["E501"]  # line length handled by formatter
lint.isort.known-first-party = ["fvmatch"]
lint.flake8-bugbear.extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "supabase",
    "pydantic_settings.*",
    "typer.*",
    "scipy",
    "scipy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "fvmatch.data.*",
    "fvmatch.model.*",
    "fvmatch.accounting.*",
    "fvmatch.execution.*",
    "fvmatch.edge.gate",
    "fvmatch.cli",
]
disallow_untyped_defs = false
disable_error_code = ["attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src/fvmatch"]
